logs/analysis.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/analysis'...
Compiling './lib/python3.5/site-packages/analysis/arguments.py'...
***   File "./lib/python3.5/site-packages/analysis/arguments.py", line 117
    raise TypeError, "Argument found after keyword arguments."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/analysis/namespace.py'...
***   File "./lib/python3.5/site-packages/analysis/namespace.py", line 92
    raise ScopeError, node
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/analysis/node.py'...
***   File "./lib/python3.5/site-packages/analysis/node.py", line 81
    raise BlockedError, (target, source)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/analysis/output'...
Listing './lib/python3.5/site-packages/analysis/output/generators'...
Compiling './lib/python3.5/site-packages/analysis/output/generators/common.py'...
***   File "./lib/python3.5/site-packages/analysis/output/generators/common.py", line 94
    elif type(value) == type(0L):
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/analysis/output/utils.py'...
***   File "./lib/python3.5/site-packages/analysis/output/utils.py", line 132
    print node, callers, others
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/analysis/output/visitors'...
Compiling './lib/python3.5/site-packages/analysis/source.py'...
***   File "./lib/python3.5/site-packages/analysis/source.py", line 486
    except InvalidTargetError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/analysis-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
